latest_corrections_industry_VRE_heat

--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -14,7 +14,7 @@ elec_demand:
     default:
       commodity:
         node:
-          - [flow_scaling_method,scale_to_annual,[[1]]]
+          - [flow_scaling_method,use_profile_directly,[[1]]]
     dynamic:
       commodity__region:
         node:
@@ -144,7 +144,7 @@ vre:
           profile_limit_upper: [profile_limit_upper,[[1],[2]],[potential,{existing: capacity}],null,{"on": PECD2, "off": OFF3}]
       technology_type__region:
         set:
-          potential: [invest_max_total,[[1]],[area,{}],0.0,{"on": PECD2, "off": OFF3}]
+          potential: [max_cumulative,[[1]],[area,{}],0.0,{"on": PECD2, "off": OFF3}]
 
 # Hydro systems
 hydro_systems:
@@ -444,6 +444,7 @@ transport_sector:
     default:
       node:
         - [storage_limit_method,upper_limit,[[2,3]],{node_type: storage}]
+        - [flow_scaling_method,scale_to_annual,[[2,3]],{}]
     fixed:
       commodity__vehicle__region:
         node:
@@ -521,6 +522,7 @@ heat_sector:
       end-use:
         node:
           - [node_type,balance,[[1]]]
+          - [flow_scaling_method,scale_to_annual,[[1]]]
       commodity__to_end-use:
         node__link__node:
           - [efficiency,1.0,[[1],[1,2],[2]]]
