--- a/europe/_ines-builder/sysconfig.yaml
+++ b/europe/_ines-builder/sysconfig.yaml
@@ -550,6 +550,9 @@ heat_sector:
         unit:
           units_existing: [units_existing,[[1]],[area,{}],null,PECD1]
           efficiency: [efficiency,[[1]],[area,{}],null,PECD1]
+      commodity__to_technology__to_commodity__region:
+        unit_flow__unit_flow:
+          conversion_rate: [equality_ratio,[[2],[3],[1],[2]],[area,{}],null,PECD1]
       storage__region:
         node:
           storages_existing: [storages_existing,[[1]],[area,{}],null,PECD1]
